tests/NormalTests/paczka1/fuzzy1/14766058.err
Error in line 22: vSN S158 0,8
Error in line 30: MUmnrvS A165 16,4
Error in line 37: A956 A184 -4,7
Error in line 36: MUmnrvS A956 95,6
